--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
 			<div class="main_about_wrap">
 				<img class="main_about_img" src="img/about_main.png" alt="">
 				<div class="main_about">
+					<h1>О компании</h1>
+					<hr>
 					<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ratione dolor repellat ipsum, alias quasi.</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic blanditiis culpa, neque inventore odio quas iure, praesentium eum quae! Cum aliquam sequi quod, blanditiis ex vitae soluta quo. Illum officiis libero, voluptatem, enim minus neque labore dicta aliquam obcaecati deleniti distinctio dolorum deserunt ullam voluptate sint quam dignissimos eum fugit.</p>
 					<div class="main_about_buttons">
-						<div class="main_about_more">
-							<span>ЧИТАТЬ БОЛЬШЕ</span>
-						</div>
+						<a href="#" class="main_about_more">ЧИТАТЬ БОЛЬШЕ</a>
 						<a href="#" class="main_about_video">
 							<i class="fa fa-youtube-play" aria-hidden="true"></i>
 							<span>СМОТРЕТЬ ВИДЕО</span>
@@ -197,9 +197,13 @@
 				</div>
 			</div>
 		</section>
+		<section id="Map">
+			<div id="mainMap"></div>
+		</section>
 	</div>
 	<script src="plugins/jquery/jquery.min.js"></script>
 	<script src="plugins/jquery/jquery-ui.min.js"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=503a0940-5a87-48b5-b15f-b17d28380ac1&amp;lang=en_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="./plugins/onepage-scroll/jquery.onepage-scroll.min.js"></script>
 	<script type="text/javascript" src="./plugins/select/jquery.selectBoxIt.min.js"></script>
 	<script type="text/javascript" src="./plugins/mask/jquery.maskedinput.min.js"></script>
