--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Главная</title>
-	<!-- <link rel="stylesheet" href="./plugins/onepage-scroll/onepage-scroll.css"> -->
+	<link rel="stylesheet" href="./plugins/onepage-scroll/onepage-scroll.css">
 	<link rel="stylesheet" href="./plugins/slick/slick.css">
 	<link rel="stylesheet" href="./plugins/select/jquery.selectBoxIt.css">
 	<link rel="stylesheet" href="./fonts/font-awesome/css/font-awesome.min.css">
@@ -28,16 +28,16 @@
 				</div>	
 				<div class="header_nav">
 					<ul>
-						<li><a href="#">Строительство и ремонт зданий</a></li>
-						<li><a href="#">Спецтехника</a>
+						<li><a href="#main_slider">Строительство и ремонт зданий</a></li>
+						<li><a href="#main_catigories">Спецтехника</a>
 							<ul class="submenu">
 								<li><a href="#">Каталог спецтехники</a></li>
 								<li><a href="#">Ремонт</a></li>
 								<li><a href="#">Покупка</a></li>
 							</ul>
 						</li>
-						<li><a href="#">О компании</a></li>
-						<li><a href="#">Контакты</a></li>
+						<li><a href="#main_about">О компании</a></li>
+						<li><a href="#Map">Контакты</a></li>
 					</ul>
 				</div>
 				<div class="header_push">
@@ -198,8 +198,63 @@
 			</div>
 		</section>
 		<section id="Map">
+			<div class="main_contacts_caption_wrap">
+				<div class="main_contacts_caption">
+					<h1>Контакты</h1>
+				<hr>
+				</div>
+			</div>
+			<footer>
+				<div class="footer_wrap">
+					<div class="footer">
+						<div class="footer_logo">
+							<div class="logo">
+								<img src="img/logo.svg" alt="">
+							</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia quidem, molestias magnam. Magni assumenda eum eius sit voluptate accusamus aliquam quidem, fuga fugiat vero quam voluptates. Modi nihil dolorum reiciendis.</p>
+						</div>
+						<div class="footer_info">
+							<h3 class="footer_caption">Информация</h3>
+							<ul>
+								<li><a href="#">Спецтехника</a></li>
+								<li><a href="#">Ремонт</a></li>
+								<li><a href="#">Покупка</a></li>
+								<li><a href="#">О компании</a></li>
+								<li><a href="#">Контакты</a></li>
+							</ul>
+						</div>
+						<div class="footer_contacts">
+							<h3 class="footer_caption">Контакты</h3>
+							<div class="footer_contacts_tel">
+								<a href="tel:8 800 200 89 10">
+									<img src="img/phone_footer.png" alt="">
+									<span>8 800 200 89 10</span>
+								</a>
+							</div>
+							<div class="footer_contacts_adress">
+								<p>ул. 50 лет Октября, 45а, офис 404</p>
+							</div>
+							<div class="footer_contacts_email">
+								<a href="mailto:ppk@gmail.com">ppk@gmail.com</a>
+								<img src="img/application.png" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="footer_copyright">
+						
+					</div>
+				</div>
+			</footer>
 			<div id="mainMap"></div>
+
 		</section>
+		
+	</div>
+	<div class="main_scroll">
+		<div class="scroll_c scroll1"></div>
+		<div class="scroll_c scroll2"></div>
+		<div class="scroll_c scroll3"></div>
+		<div class="scroll_c scroll4"></div>
 	</div>
 	<script src="plugins/jquery/jquery.min.js"></script>
 	<script src="plugins/jquery/jquery-ui.min.js"></script>
