--- a/index.html
+++ b/index.html
@@ -241,21 +241,32 @@
 						</div>
 					</div>
 					<div class="footer_copyright">
-						
+						<p>Copyright @ 2010-2020</p>
 					</div>
 				</div>
 			</footer>
 			<div id="mainMap"></div>
-
 		</section>
-		
+		<div class="popup_wrap">
+			<div class="popup">
+				<div class="popup_esc">&times;</div>
+				<div class="popup_caption">
+					<h1>ОСТАВИТЬ ЗАЯВКУ</h1>
+				</div>
+				<div class="popup_form_wrap">
+					<form class="popup_form" action="#">
+						<p>Как вас зовут?</p>
+						<input type="text" placeholder="Ваше Имя">
+						<input type="text" class="form_tel" placeholder="Введите телефон:">
+						<input type="email" placeholder="Введите e-mail">
+						<textarea name="" id="" cols="30" rows="10"></textarea>
+						<input type="submit" value="ОТПРАВИТЬ">
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="main_scroll">
-		<div class="scroll_c scroll1"></div>
-		<div class="scroll_c scroll2"></div>
-		<div class="scroll_c scroll3"></div>
-		<div class="scroll_c scroll4"></div>
-	</div>
+						
 	<script src="plugins/jquery/jquery.min.js"></script>
 	<script src="plugins/jquery/jquery-ui.min.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=503a0940-5a87-48b5-b15f-b17d28380ac1&amp;lang=en_RU" type="text/javascript"></script>
