--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<header class="header header_main">
 			<div class="container_header">
 				<div class="logo">
-					<img src="img/logo.svg" alt="">
+					<a href="#">
+						<img src="img/logo.svg" alt="">
+					</a>
 				</div>
 				<div class="header_phone">
 					<div class="header_phone_img">
@@ -209,7 +211,9 @@
 					<div class="footer">
 						<div class="footer_logo">
 							<div class="logo">
-								<img src="img/logo.svg" alt="">
+								<a href="#">
+									<img src="img/logo.svg" alt="">
+								</a>
 							</div>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia quidem, molestias magnam. Magni assumenda eum eius sit voluptate accusamus aliquam quidem, fuga fugiat vero quam voluptates. Modi nihil dolorum reiciendis.</p>
 						</div>
@@ -259,7 +263,7 @@
 						<input type="text" placeholder="Ваше Имя">
 						<input type="text" class="form_tel" placeholder="Введите телефон:">
 						<input type="email" placeholder="Введите e-mail">
-						<textarea name="" id="" cols="30" rows="10"></textarea>
+						<textarea name="" id="" cols="30" rows="10" placeholder="Сообщение"></textarea>
 						<input type="submit" value="ОТПРАВИТЬ">
 					</form>
 				</div>
