--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Контакты</title>
+	<title>О компании</title>
 	<!-- <link rel="stylesheet" href="./plugins/onepage-scroll/onepage-scroll.css"> -->
 	<link rel="stylesheet" href="./plugins/slick/slick.css">
 	<link rel="stylesheet" href="./plugins/select/jquery.selectBoxIt.css">
@@ -50,57 +50,48 @@
 	<div class="breadcrumbs">
 		<div class="container">
 			<a href="#">Главная &nbsp;&raquo;</a>
-			<span>&nbsp; Контакты</span>
+			<span>&nbsp; О компании</span>
 		</div>
 	</div>
-	<section id="contacts_wrap">
-		<div class="container contacts">
-			<div class="contacts_left">
-				<h1>Контакты</h1>
-				<hr>
-				<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, eveniet!</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam quae, officia vitae pariatur architecto, cupiditate itaque tempore quidem exercitationem, culpa, deserunt dolores aliquid maxime eius molestiae facere tempora error iusto.</p>
-				<div class="contacts_block_list">
-					<div class="contacts_block">
-						<div class="contacts_block_img">
-							<img src="img/phone_footer.png" alt="">
-						</div>
-						<div class="contacts_block_phone">
-							<p>Телефон для связи</p>
-							<a href="tel:8 800 2000 700">8 800 2000 700</a>
-						</div>
+	<section id="about">
+		<div class="container about">
+			<h1>О Компании</h1>
+			<hr>
+			<div class="about_block_list">
+				<div class="about_block">
+					<div class="about_block_img">
+						<img src="img/about1.jpg" alt="">
 					</div>
-					<div class="contacts_block">
-						<div class="contacts_block_img">
-							<img src="img/mail.png" alt="">
-						</div>
-						<div class="contacts_block_mail">
-							<p>Электронный адрес</p>
-							<a href="mailto:ppk@gmail.com">ppk@gmail.com</a>
-						</div>
-					</div>
-					<div class="contacts_block">
-						<div class="contacts_block_img">
-							<img src="img/pin_contacts.png" alt="">
-						</div>
-						<div class="contacts_block_address">
-							<p>Адрес офиса</p>
-							<p>ул. 50 лет Октября, 45а, офис 404</p>
+					<div class="about_block_content">
+						<div class="about_block_content_text">
+							<h2>Техника проверенная временем и лучшие новые модели</h2>
+							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и в</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eum facere quae incidunt laborum, expedita cupiditate quidem numquam molestiae voluptatum! Assumenda tenetur culpa amet eligendi, delectus, ipsa nisi ipsam, ex numquam eos perferendis quas! Unde nam nihil, doloribus fugiat sed quaerat aut corrupti! Laboriosam, cum, similique. Pariatur a ipsum corporis.</p>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="contacts_right">
-				<div class="popup">
-					<div class="popup_form_wrap">
-						<form class="popup_form" action="#">
-							<p>Как вас зовут?</p>
-							<input type="text" placeholder="Ваше Имя">
-							<input type="text" class="form_tel" placeholder="Введите телефон:">
-							<input type="email" placeholder="Введите e-mail">
-							<textarea name="" id="" cols="30" rows="10" placeholder="Сообщение"></textarea>
-							<input type="submit" value="ОТПРАВИТЬ">
-						</form>
+				<div class="about_block">
+					<div class="about_block_img">
+						<img src="img/about2.jpg" alt="">
+					</div>
+					<div class="about_block_content">
+						<div class="about_block_content_text">
+							<h2>Техника проверенная временем и лучшие новые модели</h2>
+							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и в</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eum facere quae incidunt laborum, expedita cupiditate quidem numquam molestiae voluptatum! Assumenda tenetur culpa amet eligendi, delectus, ipsa nisi ipsam, ex numquam eos perferendis quas! Unde nam nihil, doloribus fugiat sed quaerat aut corrupti! Laboriosam, cum, similique. Pariatur a ipsum corporis.</p>
+						</div>
+					</div>
+				</div>
+				<div class="about_block">
+					<div class="about_block_img">
+						<img src="img/about3.jpg" alt="">
+					</div>
+					<div class="about_block_content">
+						<div class="about_block_content_text">
+							<h2>Техника проверенная временем и лучшие новые модели</h2>
+							<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и в</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eum facere quae incidunt laborum, expedita cupiditate quidem numquam molestiae voluptatum! Assumenda tenetur culpa amet eligendi, delectus, ipsa nisi ipsam, ex numquam eos perferendis quas! Unde nam nihil, doloribus fugiat sed quaerat aut corrupti! Laboriosam, cum, similique. Pariatur a ipsum corporis.</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -176,6 +167,11 @@
 			</div>
 		</div>
 	</div>
+	
+
+
+
+
 
 
 
